# bincode

./: .gitignore  Cargo.toml
.github/: FUNDING.yml
.github/workflows/: cross_platform.yml  miri.yml
derive/: Cargo.toml
docs/: migration_guide.md
examples/: basic.rs
src/: byteorder.rs  config.rs  error.rs  internal.rs  lib.rs
src/config/: endian.rs  int.rs  legacy.rs  limit.rs  mod.rs  trailing.rs
src/de/: mod.rs  read.rs
src/features/: impl_alloc.rs
src/features/serde/: ser.rs
src/ser/: mod.rs
tests/: alloc.rs  std.rs
