[package]
name = "bincode"
version = "1.3.3" # remember to update html_root_url
authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Zoey Riordan <zoey@dos.cafe>", "Lone Ge <lone@soo.network>"]
exclude = ["logo.png", "examples/*", ".gitignore", ".travis.yml"]
edition = "2021"
publish = false
repository = "https://github.com/soon/bincode"
documentation = "https://docs.rs/bincode"
readme = "./readme.md"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
license = "MIT"
description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"

[dependencies]
# This crate builds I/O and error trait functionality in `no_std` environments.
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
serde = { version = "1.0.209", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_bytes = "0.11.15"
serde_derive = "1.0.209"

[features]
# This feature is no longer used and is DEPRECATED. This crate relies on the
# serde `serde_if_integer128` macro to enable i128 support for Rust compilers
# and targets that support it. The feature will be removed if and when a new
# major version is released.
i128 = []

[badges]
travis-ci = { repository = "servo/bincode" }
